Styles the articles list to be 2 columns. Centers read more button. Centers article title Co-Authored-by: Johan <johan@waytogo.se> Co-Authored-by: Karro <karolina.frostare@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,24 @@
 #article-image {
   width: "auto";
   height: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+
 }
 
+#title {
+  text-align: center;
+  margin-top: 8px;
+}
+
+#tagline {
+  padding-top: 50px;
+}
+
+
+#read-more-button {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
