--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 #article-image {
-  width: auto;
-  max-height: 700px;
+  width: 100%;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -38,5 +38,17 @@
   text-align: right;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+#dropdown-menu {
+  margin-top: 5px;
+}
+
+#login-button {
+  margin-left: 26px;
+}
+
+#logout-button {
+  margin-left: 26px;
 }
 
